test: AbstractControllerTest